pls fix overflow

--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -23,7 +23,8 @@
 }
 
 #wasteStreams {
-    overflow-y: auto;
+    overflow: -moz-scrollbars-vertical;
+    overflow-y: scroll;
 }
 #dashboard-footer1, #dashboard-footer2, #dashboard-footer3 {
     box-shadow: none;
